# meter

./: .gitmodules  readme  readme.md
common/: Cargo.toml
common/src/: lib.rs  rpc.rs
device/: .env  Cargo.toml  Embed.toml  readme  readme.md  rust-toolchain.toml
device/.cargo/: config.toml
device/src/: main.rs  rpc.rs
e_gui/: Cargo.toml
e_gui/src/: lib.rs  main.rs  rpc.rs
