[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
heapless = { version = "0.8.0", features = ["serde", "defmt-03"] }
serde = { version = "1.0.215", features = ["derive"], default-features = false }
ppproto = "0.2.1"
# portable-atomic = {version = "1.9.0", features = ["critical-section"] }
# portable-atomic-util = { version = "0.2.3", features = [], default-features = false }
scapegoat = "2.3.0"
# anyhow = { version = "1.0.93", default-features = false }
