[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
heapless = { version = "0.8.0", features = ["serde", "defmt-03"] }
serde = { version = "1.0.215", features = ["derive"], default-features = false }
postcard-rpc = { version = "0.10", features = ["embassy-usb-0_3-server"] }


[patch.crates-io]
postcard-rpc = { path = "../postcard-rpc/source/postcard-rpc" }

[dependencies.postcard-schema]
version = "0.1"
features = ["derive"]