[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
common = { version = "0.1.0", path = "../common" }
derive-new = "0.7.0"
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = "0.29.1"
futures = "0.3.31"
postcard = { version = "1.0.10" }
serde = "1.0.215"
serialport = "4.6.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-serial = "5.4.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.postcard-rpc]
version = "0.10"
features = [
    "use-std",
    "raw-nusb",
]

[dependencies.postcard-schema]
version = "0.1"
features = ["derive"]

[patch.crates-io]
postcard-rpc = { path = "../postcard-rpc/source/postcard-rpc" }
